# wasm-image-compressor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  cmake_install.cmake  serve.sh
docs/: index.html  index.js  style.css  worker.js
src/: main.cpp
